[package]
name        = "mars-source-vectorfile"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish.workspace      = true
rust-version.workspace = true
description = "Object-store-backed vector-file adapter for mars-source. Pure-Rust decoders for FlatGeobuf, GeoJSON, and zipped Shapefile, with on-disk cache, etag change feed, and per-binding CRS reprojection."

[lints]
workspace = true

[dependencies]
mars-source   = { workspace = true }
mars-types    = { workspace = true }
mars-expr     = { workspace = true }
mars-config   = { workspace = true }
mars-proj     = { workspace = true }

async-trait   = { workspace = true }
bytes         = { workspace = true }
fallible-streaming-iterator = { workspace = true }
flatgeobuf    = { workspace = true }
futures-core  = { workspace = true }
geo-types     = { workspace = true }
futures-util  = { workspace = true }
geozero       = { workspace = true }
object_store  = { workspace = true }
rusqlite      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
shapefile     = { workspace = true }
sha2          = { workspace = true }
tempfile      = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
zip           = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["test-util", "rt-multi-thread", "macros"] }
tempfile = { workspace = true }
wiremock = { workspace = true }
futures-util = { workspace = true }
