[package]
name        = "mars-store-fs"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "Filesystem-backed mars-store adapter. Doubles as the node-local SSD cache (mirrored key layout)."

[lints]
workspace = true

[dependencies]
mars-store     = { workspace = true }
mars-types     = { workspace = true }
mars-artifact  = { workspace = true }
async-trait    = { workspace = true }
bytes          = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
serde_json     = { workspace = true }
futures-core   = { workspace = true }
futures-util   = { workspace = true }
rand           = "0.8"

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
proptest = "1"
