[package]
name        = "mars-store-fs"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "Filesystem-backed mars-store adapter. Doubles as the node-local SSD cache (mirrored key layout)."

[lints]
workspace = true

[dependencies]
mars-store     = { workspace = true }
mars-types     = { workspace = true }
mars-artifact  = { workspace = true }
async-trait    = { workspace = true }
bytes          = { workspace = true }
tokio          = { workspace = true }
serde_json     = { workspace = true }
futures-core   = { workspace = true }
futures-util   = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
proptest = { workspace = true }
