[package]
name        = "mars-store-s3"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "Object-store adapter for mars-store backed by `object_store` (S3 / MinIO / R2 / GCS)."

[lints]
workspace = true

[dependencies]
mars-store     = { workspace = true }
mars-types     = { workspace = true }
mars-artifact  = { workspace = true }
async-trait    = { workspace = true }
bytes          = { workspace = true }
tokio          = { workspace = true }
serde_json     = { workspace = true }
futures-core   = { workspace = true }
futures-util   = { workspace = true }
tracing        = { workspace = true }
object_store   = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
object_store = { workspace = true, features = ["aws"] }
