[package]
name        = "mars-store-s3"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "Object-store adapter for mars-store backed by `object_store` (S3 / MinIO / R2 / GCS)."

[lints]
workspace = true

[dependencies]
mars-store     = { workspace = true }
mars-types     = { workspace = true }
mars-artifact  = { workspace = true }
async-trait    = { workspace = true }
bytes          = { workspace = true }
tokio          = { workspace = true }
serde_json     = { workspace = true }
futures-core   = { workspace = true }
futures-util   = { workspace = true }
tracing        = { workspace = true }
object_store   = { workspace = true }

[features]
default = []
# in-process integration tests that spin up a garage container; gated
# because docker is not always available. plain `cargo test` skips them.
integration = []

[dev-dependencies]
tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
object_store = { workspace = true, features = ["aws"] }
mars-artifact    = { workspace = true }
mars-test-support = { workspace = true, features = ["docker"] }
rand              = { workspace = true }
