[package]
name        = "mars-compiler"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "MARS compiler use-case: change-feed → dirty pages → rebuild → publish manifest."

[lints]
workspace = true

[dependencies]
mars-types         = { workspace = true }
mars-artifact      = { workspace = true }
mars-source        = { workspace = true }
bytes              = { workspace = true }
mars-store         = { workspace = true }
mars-config        = { workspace = true }
mars-observability = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
mars-store         = { workspace = true, features = ["test-utils"] }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros"] }
