[package]
name        = "mars-compiler"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "MARS compiler use-case: change-feed → dirty pages → rebuild → publish manifest."

[lints]
workspace = true

[dependencies]
mars-types         = { workspace = true }
mars-artifact      = { workspace = true }
mars-source        = { workspace = true }
blake3             = "1"
mars-expr          = { workspace = true }
mars-style         = { workspace = true }
bytes              = { workspace = true }
futures-core       = { workspace = true }
futures-util       = { workspace = true }
async-trait        = { workspace = true }
mars-store         = { workspace = true }
mars-config        = { workspace = true }
mars-observability = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
tempfile           = { workspace = true }
hashlink           = { workspace = true }
parking_lot        = { workspace = true }

[dev-dependencies]
mars-store         = { workspace = true, features = ["test-utils"] }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
criterion          = { workspace = true }
serde_yaml_ng      = { workspace = true }

[[bench]]
name    = "page_rebuild"
harness = false

[[bench]]
name    = "decimation"
harness = false
