[package]
name        = "mars-runtime"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "MARS runtime use-case: render plan → resolve artifacts → label collide → call Renderer → encode."

[lints]
workspace = true

[dependencies]
mars-types         = { workspace = true }
mars-grid          = { workspace = true }
mars-style         = { workspace = true }
mars-artifact      = { workspace = true }
mars-store         = { workspace = true }
mars-render-port   = { workspace = true }
mars-config        = { workspace = true }
mars-observability = { workspace = true }
mars-proj          = { workspace = true }
mars-text          = { workspace = true }
rstar              = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
bytes              = { workspace = true }
async-trait        = { workspace = true }
arc-swap           = { workspace = true }
futures-util       = { workspace = true }
hashbrown          = { workspace = true }
hashlink           = { workspace = true }
parking_lot        = { workspace = true }

[dev-dependencies]
mars-store         = { workspace = true, features = ["test-utils"] }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion          = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name    = "render"
harness = false
