[package]
name        = "mars-runtime"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "MARS runtime use-case: render plan → resolve artifacts → label collide → call Renderer → encode."

[lints]
workspace = true

[features]
# exposes `mars_runtime::test_fixtures` (in-memory runtime + manifest +
# pages) for tests and benches. activated for all dev/test/bench targets
# via the self-dev-dep below; not enabled in production builds.
test-fixtures = ["mars-store/test-utils"]

[dependencies]
mars-types         = { workspace = true }
mars-grid          = { workspace = true }
mars-style         = { workspace = true }
mars-artifact      = { workspace = true }
mars-source        = { workspace = true }
mars-store         = { workspace = true }
mars-render-port   = { workspace = true }
mars-config        = { workspace = true }
mars-observability = { workspace = true }
mars-proj          = { workspace = true }
mars-text          = { workspace = true }
rstar              = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
bytes              = { workspace = true }
async-trait        = { workspace = true }
arc-swap           = { workspace = true }
futures-util       = { workspace = true }
hashbrown          = { workspace = true }
hashlink           = { workspace = true }
parking_lot        = { workspace = true }
png                = { workspace = true }
rayon              = { workspace = true }
zune-jpeg          = { workspace = true }

[dev-dependencies]
# self-dev-dep with `test-fixtures` enabled. lets integration tests in
# `tests/` and benches in `benches/` see `mars_runtime::test_fixtures`
# without each target having to opt in via `required-features` (which
# silently skips targets when the feature is not active).
mars-runtime       = { path = ".", features = ["test-fixtures"] }
mars-store         = { workspace = true, features = ["test-utils"] }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
criterion          = { workspace = true }
serde_yaml_ng      = { workspace = true }

[[bench]]
name    = "feature_prep"
harness = false
