[package]
name        = "mars-artifact"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "MARS artifact container codec: header / sections / footer. Sync mmap reader and writer."
build       = "build.rs"

[lints]
workspace = true

[dependencies]
mars-types = { workspace = true }
bytes      = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
planus     = "1"
blake3     = "1"

[build-dependencies]
planus-codegen = "1"
planus-translation = "1"

[dev-dependencies]
proptest = "1"
