[package]
name        = "mars-artifact"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "MARS artifact container codec: header / sections / footer. Sync mmap reader and writer."
build       = "build.rs"

[lints]
workspace = true

[dependencies]
mars-types = { workspace = true }
mars-expr  = { workspace = true }
bytes      = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
planus     = "1"
blake3     = "1"

[build-dependencies]
planus-codegen = "1"
planus-translation = "1"

[package.metadata.cargo-machete]
ignored = ["serde"]

[dev-dependencies]
proptest  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "iter"
harness = false
