[package]
name        = "mars-artifact"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "MARS artifact container codec: header / sections / footer. Sync mmap reader and writer."
build       = "build.rs"

# criterion only; libtest harness rejects --save-baseline
[lib]
bench = false

[lints]
workspace = true

[dependencies]
mars-types = { workspace = true }
mars-expr  = { workspace = true }
bytes      = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
planus     = { workspace = true }
blake3     = { workspace = true }

[build-dependencies]
planus-codegen = { workspace = true }
planus-translation = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde"]

[dev-dependencies]
proptest  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "iter"
harness = false

[[bench]]
name    = "spatial_index"
harness = false
