[package]
name        = "mars-expr"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "MARS embedded expression language (when: filters, text: interpolations) - AST, parser, validator, in-memory evaluator."

[lints]
workspace = true

[dependencies]
serde      = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
