[package]
name        = "mars-expr"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "MARS embedded expression language (when: filters, text: interpolations) - AST, parser, validator, in-memory evaluator."

[lints]
workspace = true

[dependencies]
serde      = { workspace = true }
thiserror  = { workspace = true }
regex      = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "parse_eval"
harness = false
