[package]
name        = "mars-grid"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "MARS grid math: cell coordinates, scale-band selection, tile-matrix-set algorithms."

[lints]
workspace = true

[dependencies]
mars-types = { workspace = true }
thiserror  = { workspace = true }
