[package]
name        = "mars-style"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "MARS style model. Compile-to-internal-form for use by the renderer."

[lints]
workspace = true

[dependencies]
serde      = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
serde_json    = { workspace = true }
serde_yaml_ng = { workspace = true }
