[package]
name        = "mars-types"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "MARS core value types: Bbox, ContentHash, RequestId, identity newtypes, manifest v3 DTOs."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
