[package]
name        = "mars-http"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "axum HTTP edge: /wms /wmts /healthz /readyz /metrics /debug/*."

[lints]
workspace = true

[dependencies]
mars-runtime      = { workspace = true }
mars-wms          = { workspace = true }
mars-wmts         = { workspace = true }
mars-observability = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
thiserror         = { workspace = true }
