[package]
name        = "mars-http"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "axum HTTP edge: /wms /wmts /healthz /readyz /metrics /debug/*."

[lints]
workspace = true

[dependencies]
mars-runtime       = { workspace = true }
mars-wms           = { workspace = true }
mars-wmts          = { workspace = true }
mars-config        = { workspace = true }
mars-types         = { workspace = true }
mars-observability = { workspace = true }
axum               = "0.8"
tower              = "0.5"
tower-http         = { version = "0.6", features = ["trace", "timeout", "limit"] }
tokio              = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
tower              = { version = "0.5", features = ["util"] }
async-trait        = { workspace = true }
mars-render-port   = { workspace = true }
mars-store         = { workspace = true }
