[package]
name        = "mars-wms"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "WMS 1.3.0 parameter parsing, capabilities document, GFI."

[lints]
workspace = true

[dependencies]
mars-runtime  = { workspace = true }
thiserror     = { workspace = true }
