[package]
name        = "mars-wms"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "WMS 1.3.0 parameter parsing, capabilities document, GFI."

[lints]
workspace = true

[dependencies]
mars-runtime  = { workspace = true }
mars-config   = { workspace = true }
mars-types    = { workspace = true }
quick-xml     = "0.39"
thiserror     = { workspace = true }

[dev-dependencies]
serde_yml     = "0.0.12"
