[package]
name        = "mars-wmts"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "WMTS 1.0.0 parameter parsing, capabilities, tile-cache key shape."

[lints]
workspace = true

[dependencies]
mars-types    = { workspace = true }
mars-runtime  = { workspace = true }
mars-config   = { workspace = true }
thiserror     = { workspace = true }
percent-encoding = "2"
quick-xml     = "0.39"

[dev-dependencies]
serde_yaml_ng = { workspace = true }
