[package]
name        = "mars-config"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "MARS service configuration: YAML model, !include resolver, ${ENV} substitution, validation."

[lints]
workspace = true

[dependencies]
mars-types  = { workspace = true }
mars-style  = { workspace = true }
mars-expr   = { workspace = true }
mars-proj   = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }
serde_yaml_ng = { workspace = true }
humantime   = "2"
regex       = "1"

[dev-dependencies]
tempfile = { workspace = true }
temp-env = { workspace = true }
