[package]
name        = "mars-observability"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "MARS observability: metric names, tracing setup, log formatter, OTLP wiring."

[lints]
workspace = true

[dependencies]
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
