[package]
name        = "mars-observability"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "MARS observability: metric names, tracing setup, log formatter, OTLP wiring."

[lints]
workspace = true

[dependencies]
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
prometheus         = { workspace = true }
