[package]
name        = "mars-proj"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "Safe wrapper around the proj C library. Per-thread PJ_CONTEXT, transformer cache."

[lints]
workspace = true
# `unsafe` is required for the FFI surface; the wrapper keeps it scoped.

[dependencies]
mars-types  = { workspace = true }
thiserror   = { workspace = true }
proj-sys    = { workspace = true }

[dev-dependencies]
criterion   = { workspace = true }

[[bench]]
name    = "transform"
harness = false
